# src/routes/categoriesRoutes.js
@@ -1,8 +1,16 @@
-import { Router } from 'express';
-import { getCategories } from '../controllers/categoriesController.js';
+import { Router } from "express";
+import { getCategories } from "../controllers/categoriesController.js";
 
 const router = Router();
 
-router.get("/", getCategories);
+router.get(
+  "/",
+  /* 
+    #swagger.tags = ['Categories']
+    #swagger.summary = 'Get all categories'
+    #swagger.description = 'Returns list of recipe categories'
+  */
+  getCategories
+);
 
 export default router;
